--- a/app/user/api/etc/user-api.yaml
+++ b/app/user/api/etc/user-api.yaml
@@ -1,3 +1,9 @@
 Name: user-api
 Host: 0.0.0.0
 Port: 1001
+UserRpcConf:
+  Endpoints:
+    - localhost:1002
+UserToken:
+  AccessSecret: okhttp123
+  AccessExpire: 644800
